# nurbs-splatting

./: .gitignore  .gitmodules  README.md  pyproject.toml
apps/: area_fill.py  sds_strokes.py  transform.py
apps/calligraphy/: berio.py  extract.py  fit.py
apps/live/: batch.py  vectorize.py
dataset/: gen_calligraphy.py  gen_emoji.py
nsplat/: geom.py  image_losses.py  nurbs.py  plut.py  scene.py  segmentation.py  spline_losses.py  stroke_init.py  tsp_art.py  utils.py
nsplat/contrib/: sd.py
nsplat/contrib/live/: __init__.py  utils.py  xing_loss.py
