[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsplat"
version = "0.1.0"
description = "NURBS Splatting for Artistic Rendering"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0" }
authors = [{ name = "J. Qiu", email = "anicoder@hnu.edu.cn" }]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "easydict",
  "pillow",
  "pyclipper",
  "matplotlib",
  "cssutils",
  "tqdm",
  "ortools",
  "scipy",
  "transformers",
  "scikit-image",
  "opencv-python",
  "open-clip-torch",
  "diffusers",
  "accelerate",
  "cairosvg",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nsplat*"]
